[gd_scene load_steps=20 format=3 uid="uid://crsenjlm3putn"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_jwj07"]
[ext_resource type="Shader" uid="uid://b4wa303tmtx0d" path="res://Shaders/hit_flash.tres" id="2_2aljt"]
[ext_resource type="Texture2D" uid="uid://bqxsy45elpers" path="res://Player/Player_idle.png" id="2_ujxdd"]
[ext_resource type="Texture2D" uid="uid://gw1wvjadsnx7" path="res://Player/Player_running.png" id="3_ajh1b"]
[ext_resource type="Script" path="res://Guns/rifle.gd" id="3_ebvks"]
[ext_resource type="Texture2D" uid="uid://c8l3qsljilbyn" path="res://Guns/Rifle.png" id="3_gnt1s"]
[ext_resource type="AudioStream" uid="uid://bwbl01vc8g2u3" path="res://Sounds/gunfire.wav" id="6_usmk8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yqhai"]
shader = ExtResource("2_2aljt")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty1v1"]
atlas = ExtResource("2_ujxdd")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bluw"]
atlas = ExtResource("3_ajh1b")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7fqt"]
atlas = ExtResource("3_ajh1b")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpyo3"]
atlas = ExtResource("3_ajh1b")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_136cc"]
atlas = ExtResource("3_ajh1b")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgbp8"]
atlas = ExtResource("3_ajh1b")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8arx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty1v1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bluw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7fqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpyo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_136cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgbp8")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wv455"]
size = Vector2(13, 20)

[sub_resource type="Animation" id="Animation_yw14n"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cpkb7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_um8bj"]
_data = {
"RESET": SubResource("Animation_cpkb7"),
"hit_flash": SubResource("Animation_yw14n")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(352, 301)
scale = Vector2(3, 3)
collision_mask = 0
script = ExtResource("1_jwj07")
_move_speed = 200.0
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_yqhai")
sprite_frames = SubResource("SpriteFrames_p8arx")
animation = &"idle"
autoplay = "running"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -10)
shape = SubResource("RectangleShape2D_wv455")

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_um8bj")
}

[node name="Gun" type="Node2D" parent="."]
z_index = 2
position = Vector2(0, -7)
script = ExtResource("3_ebvks")

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
texture_filter = 1
texture = ExtResource("3_gnt1s")
offset = Vector2(4, 0)

[node name="Marker2D" type="Marker2D" parent="Gun"]
position = Vector2(9, 1)

[node name="FirerateTimer" type="Timer" parent="Gun"]

[node name="ReloadTimer" type="Timer" parent="Gun"]

[node name="GunfireSFX" type="AudioStreamPlayer2D" parent="Gun"]
stream = ExtResource("6_usmk8")
volume_db = -16.0
pitch_scale = 2.05
max_polyphony = 3

[connection signal="timeout" from="Gun/FirerateTimer" to="Gun" method="_on_firerate_timer_timeout"]
[connection signal="timeout" from="Gun/ReloadTimer" to="Gun" method="_on_reload_timer_timeout"]
